画像にリンク

--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -38,7 +38,8 @@
             <h2>Webページ制作</h2>
         </div>
 	    <div class="box" id="y-diary">
-            <p class="works_img"><img src="img/thumbnail/y-diary.png" width="1080" height="756" alt="WEBデザイン「よしだの生活日記」"/></p>
+            <a href="https://airi-pear.github.io/y-diary/index.html" target="_blank">
+		    <p class="works_img"><img src="img/thumbnail/y-diary.png" width="1080" height="756" alt="WEBデザイン「よしだの生活日記」"/></p></a>
             <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
             <h4>「よしだの生活日記」</h4>
 		
@@ -52,12 +53,13 @@
                 <dd>Dream weaver</dd>
                 <dt>作品の説明</dt>
                 <dd>勉強や日常の記録をしておけるサイトが欲しいな、と自分用に制作したサイトです。読んでもらった人に自分の雰囲気が伝わってくれたらいいなと思い、飾りすぎていない
-		デザインにしようと意識しました。<br><a href="https://airi-pear.github.io/y-diary/subpage/20240927.html">このページ</a>はGIFを入れてみたりと、長くても飽きないページになるよう工夫しています。
+		デザインにしようと意識しました。<br><a href="https://airi-pear.github.io/y-diary/subpage/20240927.html" target="_blank">このページ</a>はGIFを入れてみたりと、長くても飽きないページになるよう工夫しています。
 		</dd>
             </dl>
         </div>
 	    <div class="box" id="new-penguin">
-            <p class="works_img"><img src="img/thumbnail/new-penguin.png" width="1080" height="756" alt="WEBデザイン「新・ペンギンって知ってる？」"/></p>
+            <a href="https://airi-pear.github.io/penguin/new-penguin-index.html" target="_blank">
+		    <p class="works_img"><img src="img/thumbnail/new-penguin.png" width="1080" height="756" alt="WEBデザイン「新・ペンギンって知ってる？」"/></p></a>
             <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
             <h4>「新・ペンギンって知ってる？」</h4>
 		
@@ -76,7 +78,9 @@
             </dl>
         </div>
 	            <div class="box" id="pickles">
-            <p class="works_img"><img src="img/thumbnail/pickles.png" width="1080" height="756" alt="WEBデザイン「ピックルス」"/></p>
+           <a href="https://airi-pear.github.io/pickles/index.html" target="_blank">
+		   <p class="works_img"><img src="img/thumbnail/pickles.png" width="1080" height="756" alt="WEBデザイン「ピックルス」"/></p></a>
+			    
             <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
             <h4>「Pickles」</h4>
 		
@@ -95,7 +99,8 @@
             </dl>
         </div>
 		       <div class="box" id="english-school">
-            <p class="works_img"><img src="img/thumbnail/english-school.png" width="1080" height="756" alt="WEBデザイン・コーディング「英会話教室」"/></p>
+            <a href="https://airi-pear.github.io/english-school/index.html" target="_blank">
+		    <p class="works_img"><img src="img/thumbnail/english-school.png" width="1080" height="756" alt="WEBデザイン・コーディング「英会話教室」"/></p></a>
             <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
             <h4>「Yoshida English School」</h4>
             <p class="to-site"><a href="https://airi-pear.github.io/english-school/index.html" target="_blank">完成したページへ</a></p>
