--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -147,7 +147,7 @@
             <h2>バナー/アイキャッチ画像</h2>
         </div>
            <div class="box" id="sandwich">
-            <p class="works_img"><a href="img/sandwich.jpg"><img src="img/sandwich.jpg"  alt="バナー「サンドイッチ専門店」"/></a></p>
+            <p class="works_img popup"><a href="img/sandwich.jpg"><img src="img/sandwich.jpg"  alt="バナー「サンドイッチ専門店」"/></a></p>
             <h3><span>自主制作</span>　<span>バナー</span></h3>
             <h4>サンドイッチ専門店　オープン</h4>
             <dl>
@@ -162,7 +162,7 @@
             </dl>
         </div>
         <div class="box" id="hiyomori">
-            <p class="works_img_x"><a href="img/hiyomori.jpg"><img src="img/hiyomori.jpg"  alt="アイキャッチ「ひよこの杜」"/></a></p>
+            <p class="works_img_x popup"><a href="img/hiyomori.jpg"><img src="img/hiyomori.jpg"  alt="アイキャッチ「ひよこの杜」"/></a></p>
             <h3><span>自主制作</span>　<span>アイキャッチ画像</span></h3>
             <h4>ひよこの杜　リニューアルオープン</h4>
             <dl>
@@ -179,7 +179,7 @@
             <p class="thanks">※友人のお店のリニューアル記念で作成したものを、許可を得て掲載しています。 <a href="https://hiyo-mori.com/" target="_blank">https://hiyo-mori.com/</a></p>
         </div>
         <div class="box" id="bungu">
-            <p class="works_img_x"><a href="img/bungu-100.jpg"><img src="img/bungu-100.jpg"  alt="バナー「文房具展」"/></a></p>
+            <p class="works_img_x popup"><a href="img/bungu-100.jpg"><img src="img/bungu-100.jpg"  alt="バナー「文房具展」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>文房具販売催事</h4>
             <dl>
@@ -195,7 +195,7 @@
             <p class="thanks">※背景　原稿用紙素材をお借りしました。 <a href="https://free-paper-texture.com/" target="_blank">https://free-paper-texture.com/</a></p>
         </div>
         <div class="box" id="gacha">
-            <p class="works_img_x"><a href="img/gacha.jpg"><img src="img/gacha.jpg" width="1025" height="600" alt="バナー「ピックアップガチャ」"/></a></p>
+            <p class="works_img_x popup"><a href="img/gacha.jpg"><img src="img/gacha.jpg" width="1025" height="600" alt="バナー「ピックアップガチャ」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>ピックアップガチャ</h4>
             <dl>
@@ -211,7 +211,7 @@
             <p class="thanks">※イラストをお借りしました。<a href="https://tachie.trpg-start.com/" target="_blank">https://tachie.trpg-start.com/</a></p>
         </div>
         <div class="box" id="jyunrei">
-            <p class="works_img_y"><a href="img/jyunrei.jpg"><img src="img/jyunrei.jpg" width="750" height="1000" alt="バナー「聖地巡礼特集」"/></a></p>
+            <p class="works_img_y popup"><a href="img/jyunrei.jpg"><img src="img/jyunrei.jpg" width="750" height="1000" alt="バナー「聖地巡礼特集」"/></a></p>
             <h3><span>自主制作</span> <span>サイト内誘導バナー</span></h3>
             <h4>聖地巡礼特集</h4>
             <dl>
@@ -226,7 +226,7 @@
             </dl>
         </div>
         <div class="box" id="summersale">
-            <p class="works_img_x"><a href="img/summersale_banner.jpg" title="SummerSale"><img src="img/summersale_banner.jpg" width="1000" height="500" alt="バナー「サマーセール」"/></a></p>
+            <p class="works_img_x popup"><a href="img/summersale_banner.jpg" title="SummerSale"><img src="img/summersale_banner.jpg" width="1000" height="500" alt="バナー「サマーセール」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>サマーセール広告</h4>
             <dl>
@@ -242,7 +242,7 @@
         </div>
  
         <div class="box" id="donut">
-            <p class="works_img"><a href="img/donut_banner.jpg" title="ドーナツフェスタ"><img src="img/donut_banner.jpg" width="672" height="560" alt="バナー「ドーナツフェスタ」"/></a></p>
+            <p class="works_img popup"><a href="img/donut_banner.jpg" title="ドーナツフェスタ"><img src="img/donut_banner.jpg" width="672" height="560" alt="バナー「ドーナツフェスタ」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>ドーナツフェスタ</h4>
             <dl>
@@ -257,7 +257,7 @@
             </dl>
         </div>
         <div class="box" id="flower">
-            <p class="works_img"><a href="img/hana_top.jpg" title="花の定期便"><img src="img/hana_top.jpg" width="672" height="560" alt="バナー「花の定期便」"/></a></p>
+            <p class="works_img popup"><a href="img/hana_top.jpg" title="花の定期便"><img src="img/hana_top.jpg" width="672" height="560" alt="バナー「花の定期便」"/></a></p>
             <h3><span>自主制作</span> <span>バナー</span></h3>
             <h4>花の定期便</h4>
             <dl>
@@ -275,7 +275,7 @@
             <h2>その他</h2>
         </div>
 			   <div class="box" id="illustration-eng">
-            <p class="works_img_x"><a href="img/thumbnail/illustration.jpg"　title="イラスト風加工"><img src="img/thumbnail/illustration.jpg" width="700" height="500" alt="イラスト風加工"/></a></p>
+            <p class="works_img_x popup"><a href="img/thumbnail/illustration.jpg"　title="イラスト風加工"><img src="img/thumbnail/illustration.jpg" width="700" height="500" alt="イラスト風加工"/></a></p>
             <h3><span>自主制作</span> <span>イラスト制作</span></h3>
             <dl>
                 <dt>制作時期</dt>
@@ -290,7 +290,7 @@
            
         </div>
         <div class="box" id="pictgram">
-            <p class="works_img_x"><a href="img/pictgram_sise.jpg"　title="ピクトグラム"><img src="img/pictgram_sise.jpg" width="964" height="513" alt="ピクトグラム"/></a></p>
+            <p class="works_img_x popup"><a href="img/pictgram_sise.jpg"　title="ピクトグラム"><img src="img/pictgram_sise.jpg" width="964" height="513" alt="ピクトグラム"/></a></p>
             <h3><span>自主制作</span> <span>ピクトグラム</span></h3>
             <dl>
                 <dt>制作時期</dt>
@@ -305,7 +305,7 @@
         </div>
 		
         <div class="box" id="kaidan">
-            <p class="works_img_x"><a href="img/kaidan.jpg"　title="イラスト風加工"><img src="img/kaidan.jpg" width="1280" height="720" alt="イラスト風加工"/></a></p>
+            <p class="works_img_x popup"><a href="img/kaidan.jpg"　title="イラスト風加工"><img src="img/kaidan.jpg" width="1280" height="720" alt="イラスト風加工"/></a></p>
             <h3><span>自主制作</span> <span>写真加工</span></h3>
             <dl>
                 <dt>制作時期</dt>
@@ -339,7 +339,7 @@
 <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script> 
 <script>
   $(function(){
-    $(".works_img a,.works_img_x a,.works_img_y a").magnificPopup({
+    $(".popup a").magnificPopup({
       type:"image",
       gallery:{
         enabled:true,
