パン屋追加

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             </div>
             <h3>Webページ制作</h3>
             <ul class="list_webdesign">
+		     <li class="inview"><a href="portfoliopage.html#rainydaybakery"><img src="img/thumbnail/rainydaybakery.png"　alt="RainyDayBakery"/></a> </li>
 		    <li class="inview"><a href="portfoliopage.html#y-diary"><img src="img/thumbnail/y-diary.png"　alt="日記サイト"/></a> </li>
 		     <li class="inview"><a href="portfoliopage.html#new-penguin"><img src="img/thumbnail/new-penguin.png"　alt="新・ペンギンって知ってる？"/></a> </li>
 		    <li class="inview"><a href="portfoliopage.html#pickles"><img src="img/thumbnail/pickles.png"　alt="ピックルス"/></a> </li>
