--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -49,12 +49,12 @@
                 <dt>制作時期</dt>
                 <dd>2024.9.30</dd>
                 <dt>制作時間</dt>
-                <dd>8時間</dd>
+                <dd>10時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Dream weaver/VSCode/AdobeXD</dd>
                 <dt>作品の説明</dt>
-                <dd>親しみやすく、どなたが読んでも情報がわかりやすく伝わることを第一に考えて作成しました。<br>普段自主制作をするときには時間制限を特に設けていないのですが、
-			一日の勤務時間である8時間という時間制限をはじめに設けて作成してみたところ、普段よりも作業効率を意識して作成することが出来ました。
+                <dd>親しみやすく、どなたが読んでも情報がわかりやすく伝わることを第一に考えて作成しました。<br>パン屋さんは特別な場所ではなく日常にある場所なので、
+			見ていて疲れないページにできるようやさしい色使いを心がけています。
 		</dd>
             </dl>
         </div>
