バナー追加

--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -168,6 +168,21 @@
         <div class="h2">
             <h2>バナー/アイキャッチ画像</h2>
         </div>
+	     <div class="box" id="campain">
+            <p class="works_img_x popup"><a href="img/campain.jpg"><img src="img/campain.jpg"  alt="バナー「Xキャンペーン」"/></a></p>
+            <h3><span>自主制作</span>　<span>バナー</span></h3>
+            <h4>Xリポストキャンペーン</h4>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.10.1</dd>
+                <dt>制作時間</dt>
+                <dd>70分</dd>
+                <dt>使用ツール</dt>
+                <dd>Photoshop</dd>
+                <dt>作品の説明</dt>
+                <dd>10-20代女性をターゲットとして想定し、パステルでかわいらしく曲線的なデザインに仕上げました。<br>みずみずしい印象になるよう、水滴を加工で追加しました。</dd>
+            </dl>
+        </div>
            <div class="box" id="sandwich">
             <p class="works_img popup"><a href="img/sandwich.jpg"><img src="img/sandwich.jpg"  alt="バナー「サンドイッチ専門店」"/></a></p>
             <h3><span>自主制作</span>　<span>バナー</span></h3>
