ボタン追加

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         犬とペンギンが好き。特技は歌うことで、趣味は散歩犬を見ること・映画やアニメ鑑賞・ボードゲームなど。</p><br>
 				<p>		自宅:Mac mini(イラスト作成ではipadも使用)
 						  / <span>訓練校:Windows 11</span></p>
+                   <a href="https://airi-pear.github.io/y-diary/index.html" target="_blank" class="my-button">日常を覗く</a>
               </div>
             </div>
             <div class="h2">
