--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             </ul>
             <h3>バナー・アイキャッチ</h3>
             <ul class="list_banner">
+		    <li class="inview"><a href="portfoliopage.html#truck"><img src="img/thumbnail/truck_top.jpg" width="700" height="500" alt="トラック運転手募集"/></a> </li>
 		     <li class="inview"><a href="portfoliopage.html#campain"><img src="img/thumbnail/campain_top.jpg" width="700" height="500" alt="Xキャンペーン画像"/></a> </li>
                  <li class="inview"><a href="portfoliopage.html#sandwich"><img src="img/thumbnail/sandwich.jpg" width="700" height="500" alt="サンドイッチ"/></a> </li>
                 <li class="inview"><a href="portfoliopage.html#hiyomori"><img src="img/thumbnail/hiyomori.jpg" width="700" height="500" alt="ひよこの杜"/></a> </li>
