--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -167,10 +167,27 @@
             <span>サムネイルをクリックしますと</span><span>拡大してご覧いただけます。</span></p>
         <div class="h2">
             <h2>バナー/アイキャッチ画像</h2>
+		     </div>
+	     <div class="box" id="truck">
+            <p class="works_img popup"><a href="img/truck.jpg"><img src="img/truck.jpg"  alt="バナー「トラック運転手募集」"/></a></p>
+            <h3><span>自主制作</span>　<span>バナー</span></h3>
+            <h4>トラック運転手募集</h4>
+            <dl>
+                <dt>制作時期</dt>
+                <dd>2024.10.4</dd>
+                <dt>制作時間</dt>
+                <dd>90分</dd>
+                <dt>使用ツール</dt>
+                <dd>Photoshop</dd>
+                <dt>作品の説明</dt>
+                <dd>求人の強みがすぐに目につくよう、視認性の向上に努めました。色の数はなるべく減らし、特に読んでほしい場所にアクセントカラーを使用しています。</dd>
+            </dl>
+		    <p class="thanks"> こちらの課題に取り組ませていただきました。 <a href="https://webtan.tech/driver_recruitment/" target="_blank">https://webtan.tech/driver_recruitment/</a></p>
+        </div>
         </div>
 	     <div class="box" id="campain">
-            <p class="works_img_x popup"><a href="img/campain.jpg"><img src="img/campain.jpg"  alt="バナー「Xキャンペーン」"/></a></p>
-            <h3><span>自主制作</span>　<span>バナー</span></h3>
+            <p class="works_img_x popup"><a href="img/campain.jpg"><img src="img/campain.jpg"  alt="SNS投稿画像「Xキャンペーン」"/></a></p>
+            <h3><span>自主制作</span>　<span>SNS画像</span></h3>
             <h4>Xリポストキャンペーン</h4>
             <dl>
                 <dt>制作時期</dt>
