〇時間に直した

--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -114,7 +114,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.9.18</dd>
                 <dt>制作時間</dt>
-                <dd>280分</dd>
+                <dd>4時間半</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop/Dream weaver</dd>
                 <dt>作品の説明</dt>
@@ -134,7 +134,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.9.10</dd>
                 <dt>制作時間</dt>
-                <dd>650分</dd>
+                <dd>11時間</dd>
                 <dt>使用ツール</dt>
                 <dd>adobeXD/Dreamweaver（バナー　Photoshop・イラスト　Illustrator）</dd>
                 <dt>作品の説明</dt>
@@ -153,7 +153,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.8.16</dd>
                 <dt>制作時間</dt>
-                <dd>600分</dd>
+                <dd>9時間</dd>
                 <dt>使用ツール</dt>
                 <dd>adobeXD/Dreamweaver</dd>
                 <dt>作品の説明</dt>
@@ -176,7 +176,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.10.4</dd>
                 <dt>制作時間</dt>
-                <dd>90分</dd>
+                <dd>1時間30分</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop</dd>
                 <dt>作品の説明</dt>
@@ -193,7 +193,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.10.1</dd>
                 <dt>制作時間</dt>
-                <dd>70分</dd>
+                <dd>1時間30分</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop</dd>
                 <dt>作品の説明</dt>
@@ -223,7 +223,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.8.4</dd>
                 <dt>制作時間</dt>
-                <dd>350分</dd>
+                <dd>6時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Illustrator</dd>
                 <dt>作品の説明</dt>
@@ -240,7 +240,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.8.3</dd>
                 <dt>制作時間</dt>
-                <dd>310分</dd>
+                <dd>5時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop/Illustrator</dd>
                 <dt>作品の説明</dt>
@@ -256,7 +256,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.7.25</dd>
                 <dt>制作時間</dt>
-                <dd>360分</dd>
+                <dd>6時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop</dd>
                 <dt>作品の説明</dt>
@@ -272,7 +272,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.7.20</dd>
                 <dt>制作時間</dt>
-                <dd>220分</dd>
+                <dd>4時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop</dd>
                 <dt>作品の説明</dt>
@@ -287,7 +287,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.7.20</dd>
                 <dt>制作時間</dt>
-                <dd>180分</dd>
+                <dd>2時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop</dd>
                 <dt>作品の説明</dt>
@@ -303,7 +303,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.7.18</dd>
                 <dt>制作時間</dt>
-                <dd>200分</dd>
+                <dd>3時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop</dd>
                 <dt>作品の説明</dt>
@@ -318,7 +318,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.7.18</dd>
                 <dt>制作時間</dt>
-                <dd>140分</dd>
+                <dd>2時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop</dd>
                 <dt>作品の説明</dt>
@@ -335,7 +335,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.9.9</dd>
                 <dt>制作時間</dt>
-                <dd>120分</dd>
+                <dd>2時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Illustrator</dd>
                 <dt>作品の説明</dt>
@@ -350,7 +350,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.7.31</dd>
                 <dt>制作時間</dt>
-                <dd>110分</dd>
+                <dd>2時間</dd>
                 <dt>使用ツール</dt>
                 <dd>Illustrator</dd>
                 <dt>作品の説明</dt>
@@ -365,7 +365,7 @@
                 <dt>制作時期</dt>
                 <dd>2024.6</dd>
                 <dt>制作時間</dt>
-                <dd>200分</dd>
+                <dd>2時間30分</dd>
                 <dt>使用ツール</dt>
                 <dd>Photoshop</dd>
                 <dt>作品の説明</dt>
